--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+
+
 body {
   font-family: Arial, sans-serif;
+  background-color: #333;
 }
 
 .parent {
@@ -9,30 +12,31 @@ body {
   gap: 15px;
 }
 
-.heronsFormula{
+.heronsFormula {
   grid-area: 1 / 1 / 2 / 2;
 }
 
-.ambiguousCase{
+.ambiguousCase {
   grid-area: 1 / 2 / 2 / 2;
 }
 
-.newtonsMethod{
+.newtonsMethod {
   grid-area: 2 / 1 / 3 / 2;
 }
 
-.polynomialFormula{
+.polynomialFormula {
   grid-area: 2 / 2 / 3 / 3;
 }
 
 h3 {
-  color: #333;
+  color: white;
   border-bottom: 2px solid #008cba;
   padding-bottom: 5px;
 }
 
 label {
   font-weight: bold;
+  color: white;
 }
 
 input[type="text"],
@@ -65,7 +69,7 @@ button:hover {
 }
 
 div {
-  background-color: white;
+  background-color: #333;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
